header file to be included by test programs.
Sat Oct 7 23:01:54 2006 Tim Janik <timj@gtk.org>

        * sfitests.h: header file to be included by test programs.

svn path=/trunk/; revision=3952

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -15,7 +15,7 @@ sfi_public_headers = $(strip \
 	sfinote.h	sfiparams.h	sfiprimitives.h	sfiserial.h	\
 	sfitime.h	sfitypes.h	sfivalues.h	sfiustore.h	\
 	sficxx.hh	sfiring.h	sfimemory.h	sficomport.h	\
-	sfi.h								\
+	sfitests.h	sfi.h						\
 )
 sfi_all_sources = $(strip \
 	sfistore.c	sficomwire.c	sfifilecrawler.c \
