wrap GLib isalnum() and friends to classify unichar characters. provide
Mon Oct 9 23:00:39 2006 Tim Janik <timj@gtk.org>

        * birnetutf8.hh, birnetutf8.cc: wrap GLib isalnum() and friends to
        classify unichar characters. provide inline functions to increment
        and decrement positions in UTF-8 strings.

        * tests/strings.cc: new test program to test birnetutf8.hh functions.

svn path=/trunk/; revision=3957

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -17,6 +17,7 @@ birnet_headers = $(strip 		\
 	birnetsignal.hh                 \
 	birnettests.h			\
 	birnetthread.hh			\
+	birnetutf8.hh			\
 	birnetutils.hh			\
 )
 birnet_sources = $(strip 		\
@@ -25,6 +26,7 @@ birnet_sources = $(strip 		\
 	birnetmsg.cc			\
 	birnetsignal.cc                 \
 	birnetthread.cc			\
+	birnetutf8.cc			\
 	birnetutils.cc			\
 )
 birnet_private_headers = $(strip 	\
