Added test program for testing IIR filters against specifications. It
Mon Oct 16 13:40:47 2006 Stefan Westerfeld <stefan@space.twc.de>

	* tests/bse/Makefile.am:
	* tests/bse/filtertest.cc: Added test program for testing IIR filters
	against specifications. It supports both: scanning the actual filter
	transfer function by filtering sine waves, and computing the filter
	transfer function by evaluating H(z).

svn path=/trunk/; revision=3981

--- a/tests/bse/Makefile.am
+++ b/tests/bse/Makefile.am
@@ -50,10 +50,12 @@ generated: clean-generated $(GENERATED)
 # test programs
 #
 TESTS = cxxbinding
-noinst_PROGRAMS = $(TESTS)
+noinst_PROGRAMS = $(TESTS) filtertest
 progs_ldadd = $(top_builddir)/bse/libbse.la
 cxxbinding_SOURCES = cxxbinding.cc bsecxxapi.cc
 cxxbinding_LDADD = $(progs_ldadd)
+filtertest_SOURCES = filtertest.cc
+filtertest_LDADD = $(progs_ldadd)
 EXTRA_DIST += empty.ogg
 
 #
