-programs are supposed to be quick sanity tests, to be executed e.g.
Mon Oct 16 22:53:35 2006 Tim Janik <timj@gtk.org>

        * this change accomplishes the move to distinguish test programs
        only by the makefile rules they are executed at. check:-programs
        are supposed to be quick sanity tests, to be executed e.g. before
        commits. slowcheck:-programs are in place to check implementations,
        features and auxillary files, and may consume significant amounts
        of time. perf:-programs are programs run as performance tests and
        should provide performance measurement information as output.
        all three targets are supposed to pass without errors for make
        distcheck.

        * tests/audio/: moved here from slowtests/audio/.
        * tests/filecheck/: moved here from slowtests/filecheck/.

        * tests/audio/Makefile.am: slight fixups.

        * tests/.:
        * tests/Makefile.am: moved slowtests/ contents here.
        added perftest and testresampler to perf: rule.

        * Makefile.decl: added recursive perf: rule. silenced check-local:.

svn path=/trunk/; revision=3982

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@
 ## GNU Lesser General Public License version 2 or any later version.
 include $(top_srcdir)/Makefile.decl
 
-SUBDIRS = . data birnet sfi bse plugins shell beast-gtk launchers library tools po tests test slowtests doxer docs web
+SUBDIRS = . data birnet sfi bse plugins shell beast-gtk launchers library tools po tests test doxer docs web
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4 dist-bzip2 no-dist-gzip
@@ -73,6 +73,7 @@ distcheck: dist
 	  && $(MAKE) $(AM_MAKEFLAGS) install \
 	  && $(MAKE) $(AM_MAKEFLAGS) check \
 	  && $(MAKE) $(AM_MAKEFLAGS) slowcheck \
+	  && $(MAKE) $(AM_MAKEFLAGS) perf \
 	  && $(MAKE) $(AM_MAKEFLAGS) installcheck \
 	  && $(MAKE) $(AM_MAKEFLAGS) uninstall \
 	  && $(MAKE) $(AM_MAKEFLAGS) distuninstallcheck_dir="$$dc_install_base" \
