Run filtertest during make check.
Tue Oct 17 19:04:03 2006 Stefan Westerfeld <stefan@space.twc.de>

	* tests/bse/Makefile.am: Run filtertest during make check.

	* tests/bse/filtertest.cc: Added option parsing and usage(). Included
	a few more example filters. Increased coefficient precision for
	compiled-in coefficients.

svn path=/trunk/; revision=3993

--- a/tests/bse/Makefile.am
+++ b/tests/bse/Makefile.am
@@ -49,8 +49,8 @@ generated: clean-generated $(GENERATED)
 #
 # test programs
 #
-TESTS = cxxbinding
-noinst_PROGRAMS = $(TESTS) filtertest
+TESTS = cxxbinding filtertest
+noinst_PROGRAMS = $(TESTS)
 progs_ldadd = $(top_builddir)/bse/libbse.la
 cxxbinding_SOURCES = cxxbinding.cc bsecxxapi.cc
 cxxbinding_LDADD = $(progs_ldadd)
