added treport_maximized() and treport_minimized() benchmark reporting
Sat Oct 21 03:46:05 2006 Tim Janik <timj@gtk.org>

        * birnettests.h: added treport_maximized() and treport_minimized()
        benchmark reporting funcitons. added TUnitType to allow specification
        of units for benchmark results.

        * birnetcdefs.h:
        * birnetutils.cc: parse --g-fatal-warnings, --test-quick, --test-slow
        and --test-perf. allow special casing of tests via
        birnet_init_settings->test_quick, birnet_init_settings->test_slow and
        birnet_init_settings->test_perf.

        * tests/sorting.cc:
        * tests/strings.cc:
        * tests/threads.cc:
        * tests/Makefile.am: split up TESTS into SLOWTESTS and PERFTESTS and
        report performance results properly.

svn path=/trunk/; revision=4003

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -7,7 +7,6 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I. $(BIRNET_CFLAGS)
 DEFS	       += -DBIRNET_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST_RETURNS
 
-TESTS 		 = 
 noinst_PROGRAMS  = $(TESTS)
 progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 
@@ -15,15 +14,18 @@ TESTS		+= infotest
 infotest_SOURCES = infotest.cc
 infotest_LDADD	 = $(progs_ldadd)
 TESTS		+= strings
+SLOWTESTS       += strings
 strings_SOURCES  = strings.cc
 strings_LDADD	 = $(progs_ldadd)
 TESTS		+= threads
+PERFTESTS       += threads
 threads_SOURCES	 = threads.cc
 threads_LDADD	 = $(progs_ldadd)
 TESTS		+= signal
 signal_SOURCES	 = signal.cc
 signal_LDADD	 = $(progs_ldadd)
 TESTS		+= sorting
+SLOWTESTS       += sorting
 sorting_SOURCES  = sorting.cc
 sorting_LDADD	 = $(progs_ldadd)
 TESTS		+= datalist
