reworked to split performance tests from ordinary tests. speed up ordinary
Sat Oct 21 18:58:35 2006 Tim Janik <timj@gtk.org>

        * tests/resamplehandle.cc: reworked to split performance tests from
        ordinary tests. speed up ordinary tests if --test-slow was not
        specified. fixed test program to use TASSERT() instead of silent exit
        or return_if_fail on errors.

        * tests/subnormals.cc: refactored a bit, split up performance tests.

svn path=/trunk/; revision=4010

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -24,6 +24,7 @@ testcxx_SOURCES = testcxx.cc
 testcxx_LDADD   = $(progs_ldadd)
 
 TESTS              += subnormals 
+PERFTESTS          += subnormals 
 subnormals_SOURCES  = subnormals.cc subnormals-aux.cc
 subnormals_LDADD    = $(progs_ldadd)
 subnormals_CXXFLAGS = $(AM_CXXFLAGS) -ffast-math
@@ -37,5 +38,7 @@ blocktests_SOURCES = blocktests.cc
 blocktests_LDADD   = $(progs_ldadd)
 
 TESTS                 += resamplehandle
+SLOWTESTS             += resamplehandle
+PERFTESTS             += resamplehandle
 resamplehandle_SOURCES = resamplehandle.cc
 resamplehandle_LDADD   = $(progs_ldadd)
